force-app/main/default/objects/Forecast_Stage_Snapshot__c/Forecast_Stage_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Weekly Sunday-EOD snapshot of a Projection__c's Forecast_Stage__c, weight, and weighted amount. Written by ForecastStageSnapshotBatch every Sunday 11:59 PM ET. Master-detail to Projection__c so snapshots cascade-delete with their parent.</description>
    <label>Forecast Stage Snapshot</label>
    <nameField>
        <displayFormat>FSS-{000000}</displayFormat>
        <label>Forecast Stage Snapshot</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast Stage Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>

    <listViews>
        <fullName>Latest_Snapshots</fullName>
        <columns>NAME</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>Projection__c</columns>
        <columns>Forecast_Stage__c</columns>
        <columns>Weight_Pct__c</columns>
        <columns>Amount__c</columns>
        <columns>Weighted_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>Latest Snapshots</label>
    </listViews>
</CustomObject>