force-app/main/default/objects/Forecast_Stage_Snapshot__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Projection__c.Amount__c at snapshot time.</description>
</CustomField>