force-app/main/default/objects/Forecast_Stage_Snapshot__c/fields/Forecast_Stage__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Stage__c</fullName>
    <label>Forecast Stage</label>
    <required>true</required>
    <type>Text</type>
    <length>20</length>
    <description>Forecast stage at the moment of snapshot (string copy of Projection__c.Forecast_Stage__c so historical snapshots remain stable when the picklist changes).</description>
</CustomField>