force-app/main/default/objects/Forecast_Stage_Snapshot__c/fields/Projection__c.field-meta.xml
<CustomField>
    <fullName>Projection__c</fullName>
    <label>Projection</label>
    <type>MasterDetail</type>
    <referenceTo>Projection__c</referenceTo>
    <relationshipLabel>Forecast Stage Snapshots</relationshipLabel>
    <relationshipName>Forecast_Stage_Snapshots</relationshipName>
    <description>Parent Projection. Master-detail; snapshots cascade-delete with the projection.</description>
</CustomField>