force-app/main/default/objects/Forecast_Stage_Snapshot__c/fields/Snapshot_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Date__c</fullName>
    <label>Snapshot Date</label>
    <type>Date</type>
    <required>true</required>
    <description>Date the snapshot was taken (the Sunday end-of-day on which ForecastStageSnapshotBatch ran).</description>
</CustomField>