force-app/main/default/objects/Forecast_Stage_Snapshot__c/fields/Weight_Pct__c.field-meta.xml
<CustomField>
    <fullName>Weight_Pct__c</fullName>
    <label>Weight (%)</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Probability weight from Forecast_Stage_Weight__mdt at snapshot time.</description>
</CustomField>