force-app/main/default/objects/Forecast_Stage_Snapshot__c/fields/Weighted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Amount__c</fullName>
    <label>Weighted Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>NULLVALUE(Amount__c, 0) * NULLVALUE(Weight_Pct__c, 0) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Amount × Weight%. Use this on weighted-forecast reports.</description>
</CustomField>